# nootbooklm-bot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  app.py  auth_app.py  compose.yaml  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: dependencies.yml  ruff.yml
agent/: llm_caller.py  thread_gateway.py
agent/tools/: dice.py
auth/: __init__.py  browser.py  profile.py  sessions.py
config/: settings.py
listeners/: __init__.py
listeners/assistant/: assistant_thread_started.py  message.py
listeners/commands/: __init__.py  notebook.py
listeners/events/: app_mentioned.py
notebooklm_mcp/: __init__.py  client.py  shared.py
notebooklm_tool/: __init__.py  provider.py
tests/: test_agent.py  test_auth_app.py  test_commands.py  test_config.py  test_dockerignore.py  test_listeners.py  test_mcp.py  test_notebooklm_tool.py  test_profile.py  test_sessions.py  test_shared_mcp.py  test_thread_gateway.py
