[project]
name = "notebooklm-slack-agent"
version = "0.3.6"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk==3.43.0",
    "slack-bolt==1.29.0",
    "slack-cli-hooks<1.0.0",
    "pi-agent==0.1.0",
    "notebooklm-py==0.8.0a3",
    "python-dotenv==1.2.2",
    "httpx>=0.28,<1",
    "fastapi>=0.116,<1",
    "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.21",
]

[tool.setuptools.packages.find]
include = ["agent*", "auth*", "config*", "listeners*", "notebooklm_tool*"]

[tool.ruff]
[tool.ruff.lint]
[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
